# dusk-exchange

./: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  PLAN.md  README.md  SETUP.md  SUBMISSION.md  llms.txt  package.json  tsconfig.json
app/: bun.lockb  next.config.js  package-lock.json  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: DepositWithdrawModal.tsx  Header.tsx  MarketStats.tsx  OpenOrders.tsx  OrderBook.tsx  OrderForm.tsx  TradeHistory.tsx  WalletProvider.tsx  index.ts
app/src/hooks/: index.ts  useDuskExchange.tsx
app/src/lib/: utils.ts
artifacts/: add_order_raw_circuit_0.json  arcium_clock.json  arcium_fee_pool.json  arx_ata_81rA_dWPv.json  arx_ata_AFpf_9d8h.json  arx_ata_GDeJ_7FRq.json  arx_ata_GtBt_gVZ4.json  arx_mint.json  arx_node_AFpf_9d8h.json  arx_node_GDeJ_7FRq.json  circuits_hash.txt  cluster_acc_0.json  docker-compose-arx-env.yml  executing_pool_acc.json  match_book_raw_circuit_0.json  mempool_acc.json  mxe_acc.json  mxe_keygen_comp.json  mxe_keygen_comp_def.json  node_config_0.toml  node_config_1.toml  operator_acc_AFpf_9d8h.json  operator_acc_GDeJ_7FRq.json  wallet_acc_81rA_dWPv.json  wallet_acc_AFpf_9d8h.json  wallet_acc_GDeJ_7FRq.json  wallet_acc_GtBt_gVZ4.json  wallet_acc_callback_4qAc_nQvV.json  wallet_acc_callback_ATFQ_bn8n.json
artifacts/localnet/: node_0.json  node_1.json  node_bls_0.json  node_bls_1.json  node_callback_0.json  node_callback_1.json
client/: package-lock.json  package.json
client/examples/: basic-usage.ts
client/src/: client.ts  constants.ts  encryption.ts  idl.ts  index.ts  types.ts
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/dusk_exchange/: Cargo.toml
programs/dusk_exchange/src/: errors.rs  events.rs  lib.rs
programs/dusk_exchange/src/instructions/: cancel_order.rs  create_settlement.rs  deposit.rs  init_comp_defs.rs  initialize_market.rs  match_orders.rs  mod.rs  place_order.rs  settle_trade.rs  withdraw.rs
programs/dusk_exchange/src/state/: market.rs  mod.rs  settlement.rs  user_position.rs
scripts/: VIDEO_SCRIPT.md  mev-demo.sh  mev-demo.ts  package.json
tests/: dusk_exchange.ts
