[workspace]
members = [
    "programs/*",
    # "encrypted-ixs",  # Temporarily excluded - needs arcis-imports which has version conflicts
]
resolver = "2"


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
