[workspace]
members = [
    "programs/*",
    "encrypted-ixs",
]
resolver = "2"

[workspace.dependencies]
# Pin blake3 to avoid edition2024 requirement
blake3 = "=1.5.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
