[package]
name = "dusk_exchange"
version = "0.1.0"
description = "Private Limit Order DEX using Arcium MPC"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dusk_exchange"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.0", features = ["token"] }
# Arcium dependencies - uncomment when integrating with Arcium testnet
# arcium-anchor = "0.3.0"
# arcium-client = "0.3.0"
# arcium-macros = "0.3.0"

[dev-dependencies]
# solana-program-test = "2.0"  # Version conflict with anchor 0.30.1
tokio = "1.0"
